rhel/centos8: add php-json

--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -12,6 +12,7 @@ misp_pkg_list:
     - php-devel
 #    - php-redis
     - php-opcache
+    - php-json
     - postfix
     - "@Development tools"
     - zip
