--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -494,7 +494,11 @@
 #    - { d: "{{ gnupg_privdir }}/misp.sec", m: '0400' }
     - { d: "{{ misp_rootdir }}/.gnupg/pubring.gpg", m: '0600' }
     - { d: "{{ misp_rootdir }}/.gnupg/secring.gpg", m: '0600' }
-  when: not (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int >= 18)
+  when: >
+    not (
+          (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int >= 18) or
+          (ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8)
+        )
 
 - name: validate worker start.sh permissions
   file: dest={{ misp_rootdir }}/app/Console/worker/start.sh mode=0755
