lief: to one-line

--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -48,8 +48,8 @@
 
     - name: Build LIEF - Makefile
       command: >
-        scl enable devtoolset-7 "bash -c \"cmake3 -DLIEF_PYTHON_API=on -DLIEF_DOC=off
-                -DCMAKE_INSTALL_PREFIX=$LIEF_INSTALL -DCMAKE_BUILD_TYPE=Release
+        scl enable devtoolset-7 "bash -c \"cmake3 -DLIEF_PYTHON_API=on -DLIEF_DOC=off \
+                -DCMAKE_INSTALL_PREFIX=$LIEF_INSTALL -DCMAKE_BUILD_TYPE=Release \
                 -DPYTHON_VERSION=2.7 ..\""
       args:
         creates: "{{ misp_lief_rootdir }}/build/Makefile"
