lief, rhel/centos7: use pip module

--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -76,18 +76,21 @@
       delay: 60
       when: liefbuild is changed
 
-    - name: Build LIEF
+    - name: Install LIEF python bindings
+      pip:
+        name: "file://{{ misp_lief_rootdir }}/build/api/python"
+        state: present
+        virtualenv: "{{ misp_virtualenv }}"
+        virtualenv_python: "{{ python3_bin }}"
+      register: pkg_result
+      until: pkg_result is success
+      become: yes
+      become_user: "{{ www_user }}"
+
+    - name: Install LIEF
       command: "{{ item.c }}"
       args:
         creates: "{{ item.t }}"
-        chdir: "{{ misp_lief_rootdir }}/build"
-      become: yes
-      become_user: "{{ item.u | default('root') }}"
-      with_items:
-        - { c: "cd api/python && {{ misp_virtualenv }}/bin/python setup.py install || :",
-            t: '/var/www/_MISP/venv/lib/python3.6/site-packages/lief-0.9.0-py2.7-linux.egg',
-            u: "{{ www_user }}"
-          }
         - { c: 'make install', t: '/share/LIEF/examples/c/elf_reader.c' }
         - { c: 'make package', t: '/var/lief/build/LIEF-0.9.0-Linux.tar.gz' }
 
