--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -98,6 +98,7 @@
       command: "{{ item.c }}"
       args:
         creates: "{{ item.t }}"
+        chdir: "{{ misp_lief_rootdir }}/build"
       with_items:
         - { c: 'make install', t: '/share/LIEF/examples/c/elf_reader.c' }
         - { c: 'make package', t: '/var/lief/build/LIEF-0.9.0-Linux.tar.gz' }
