--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -48,7 +48,7 @@
 
     - name: Build LIEF - Makefile
       command: >
-        scl enable devtoolset-7 rh-python36 "bash -c \"cmake3 -DLIEF_PYTHON_API=on -DLIEF_DOC=off \
+        scl enable devtoolset-7 "bash -c \"cmake3 -DLIEF_PYTHON_API=on -DLIEF_DOC=off \
                 -DCMAKE_INSTALL_PREFIX=$LIEF_INSTALL -DCMAKE_BUILD_TYPE=Release \
                 -DPYTHON_VERSION=3.6 ..\""
       args:
