--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -28,12 +28,11 @@ provisioner:
   ansible_connection: ssh
 
 platforms:
+  - name: ubuntu-20.04
   - name: ubuntu-18.04
     driver_config:
 # https://github.com/test-kitchen/kitchen-docker/issues/285
       provision_command: mkdir -p /run/sshd
-#  - name: ubuntu-16.04
-#  - name: ubuntu-14.04
   - name: centos-8
   - name: centos-7
 #  - name: alpine-3.6
