--- a/test/vagrant/ansible.cfg
+++ b/test/vagrant/ansible.cfg
@@ -3,3 +3,4 @@ callback_whitelist = profile_tasks, timer
 roles_path = ../../../
 # https://github.com/ansible/ansible/issues/43884
 gather_timeout=20
+interpreter_python = auto
