--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -77,6 +77,7 @@
     chdir: "{{ mispmodules_rootdir }}/misp-modules"
   with_items:
     - { c: "virtualenv -p {{ python3_bin }} {{ misp_virtualenv }}", t: "{{ misp_virtualenv }}" }
+    - { c: "{{ misp_virtualenv }}/bin/pip install --upgrade pip", t: "{{ misp_virtualenv }}/bin/pip.notest" }
     - { c: "{{ misp_virtualenv }}/bin/pip install -r {{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS" }
   when: ansible_os_family == 'RedHat'
   environment:
