add few libraries for misp-modules

--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -27,6 +27,7 @@ misp_pkg_list:
     - python-pip
     - libxml2-devel
     - libxslt-devel
+    - mesa-libGL-devel
     - zlib-devel
     - curl
     - gnupg
