--- a/vars/Ubuntu-18.04.yml
+++ b/vars/Ubuntu-18.04.yml
@@ -18,6 +18,8 @@ misp_pkg_list:
  - python-setuptools
  - libxml2-dev
  - libxslt1-dev
+ - libgl1-mesa-glx
+ - libzbar0
  - zlib1g-dev
  - php-dev
  - curl
